[package]
name = "budderbrot"
version = "0.1.0"
authors = ["Malte Müller <malte@malte-mueller.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
sdl2 = "0.32.2"
num = "0.2.0"
ndarray = { version = "0.13.0", features = ["rayon"] }
noise = "0.6.0"
simdnoise = "3.1.4"
palette = "0.5.0"
clap = "2.33.0"